# aarch64_RUST_kernel_linearmap

./: BUILD.gn  README.md  link.x  linker.ld
src/: early_uart.rs  exception.rs  init.rs  main.rs  mmu.rs  start.rs  uart.rs
src/early/: exception.rs  init.rs  mmu.rs  start.rs
src/later/: allocator.rs  head.rs  main.rs  uart.rs
tools/: run_qemu.sh
