declare_args() {
  rustc_path = ""
  exception_test = true
}

if (rustc_path == "") {
  cargo_home = getenv("CARGO_HOME")
  if (cargo_home == "") {
    cargo_home = getenv("HOME") + "/.cargo"
  }

  rustc_path = cargo_home + "/bin/rustc"
}

action("kernel") {
  script = "//build/build_kernel.py"
  sources = [
    "src/exception.rs",
    "src/main.rs",
    "src/mmu.rs",
    "src/start.rs",
    "src/uart.rs",
  ]
  inputs = [ "link.x" ]
  outputs = [ "$root_build_dir/kernel.elf" ]

  args = [
    "--rustc",
    rustc_path,
    "--source",
    rebase_path("//src/main.rs", root_build_dir),
    "--linker",
    rebase_path("//link.x", root_build_dir),
    "--output",
    rebase_path("$root_build_dir/kernel.elf", root_build_dir),
  ]

  if (exception_test) {
    args += [
      "--cfg",
      "exception_test",
    ]
  }
}

group("default") {
  deps = [ ":kernel" ]
}
